Stop the assembler from complaining that the input and output files are the same, if neither of them are regular files.

PR 25572
	* as.c (main): Allow matching input and outputs when they are
	not regular files.